Correct cors config extraction from properties, enable dynamic debug mode if in dev